--- a/server/package.json
+++ b/server/package.json
@@ -4,13 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-       "start" : "nodemon app.js",
+    "start": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "ambodalle",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.16.2",
+    "bcrypt": "^1.0.2",
     "body-parser": "^1.17.2",
+    "cors": "^2.8.3",
     "express": "^4.15.3",
     "mongoose": "^4.10.7",
     "unirest": "^0.5.1"
